--- a/index.html
+++ b/index.html
@@ -424,8 +424,10 @@
                 <span id="stateText">Ready</span>
               </div>
             </div>
+            <br>
 
             <p class="promptText">Play the audio question below. When you're ready, record your answer.</p>
+            <br>
 
             <div class="audioPrompt">
               <p class="statusLine">🔊 Question audio:</p>
@@ -436,7 +438,7 @@
             </div>
 
             <div class="instruction">
-              ▶ You will have <strong>15 seconds</strong> to respond after you start recording.
+              ⚠️ You have <strong>15 seconds</strong> to respond after you start recording.
             </div>
           </div>
         </section>
@@ -463,20 +465,15 @@
               <button id="download" class="btnDownload" disabled>⬇️ Download this take</button>
               <button id="returnBtn" class="btnReturn">↩️ Return to the module</button>
             </div>
-
-            <p class="statusLine" style="margin-top:10px;">
-              This activity is for practice and demonstration purposes only and does not reflect the exact interface used during the official TOEIC exam.
-            </p>
           </div>
         </section>
-
       </div>
 
       <!-- Saved takes -->
       <div class="saved">
         <div class="savedHead">
           <h3>Saved takes</h3>
-          <p class="savedNote">Tip: If you’re using a shared computer, remove your takes before leaving.</p>
+          <p class="savedNote">💡 Tip: If you’re using a shared computer, remove your takes before leaving.</p>
         </div>
         <div class="savedList" id="savedList"></div>
       </div>
