--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <br>
 
             <div class="audioPrompt">
-              <p class="statusLine">🔊 Question audio:</p>
+              <p class="statusLine">🔊 Question</p>
               <audio controls preload="metadata">
                 <source src="toeic-speaking-task-3.mp3" type="audio/mpeg" />
                 Your browser does not support the audio element.
@@ -438,7 +438,7 @@
             </div>
 
             <div class="instruction">
-              ⚠️ You have <strong>15 seconds</strong> to respond after you start recording.
+              ⚠️ You will have <strong>15 seconds</strong> to respond after you start recording.
             </div>
           </div>
         </section>
