--- a/index.html
+++ b/index.html
@@ -436,6 +436,11 @@
                 Your browser does not support the audio element.
               </audio>
             </div>
+             <div class="questionText">
+                  <span class="questionIcon" aria-hidden="true">💬</span>
+                  What do you usually do during on lunch break at work?
+                </div>
+              </div>
 
             <div class="instruction">
               ⚠️ You will have <strong>15 seconds</strong> to respond after you start recording.
