--- a/index.html
+++ b/index.html
@@ -429,19 +429,19 @@
             <p class="promptText">Play the audio question below. When you're ready, record your answer.</p>
             <br>
 
-            <div class="qBlock">
-  <div class="qHeader"><span class="qNum">Q</span> Question</div>
-
-  <audio controls preload="metadata">
-    <source src="toeic-speaking-task-3.mp3" type="audio/mpeg" />
-    Your browser does not support the audio element.
-  </audio>
-
-  <div class="questionText">
-    <span class="questionIcon" aria-hidden="true">💬</span>
-    <span>What do you usually do during a lunch break at work?</span>
-  </div>
-</div>
+            <div class="audioPrompt">
+              <p class="statusLine">🔊 Question</p>
+              <audio controls preload="metadata">
+                <source src="toeic-speaking-task-3.mp3" type="audio/mpeg" />
+                Your browser does not support the audio element.
+              </audio>
+              <br>
+             <div class="questionText">
+                             <br>
+                  <span class="questionIcon" aria-hidden="true">💬</span>
+                  What do you usually do during on lunch break at work?
+                </div>
+              </div>
 
             <div class="instruction">
               ⚠️ You will have <strong>15 seconds</strong> to respond after you start recording.
@@ -849,3 +849,4 @@
   </script>
 </body>
 </html>
+
