--- a/index.html
+++ b/index.html
@@ -401,6 +401,50 @@
       flex-wrap:wrap;
       justify-content:flex-end;
     }
+    /* --- Task 4-like Question block (for Task 3) --- */
+.qBlock{
+  border:1px solid var(--border);
+  border-radius: var(--radius);
+  padding: 12px;
+  background:#fff;
+  margin-top: 8px;
+}
+.qHeader{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  font-weight: 800;
+  font-size: 13px;
+  margin: 0 0 8px;
+  color:#111827;
+}
+.qNum{
+  width: 24px;
+  height: 24px;
+  border-radius: 999px;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  font-size:12px;
+  background: rgba(37,99,235,.10);
+  color: #1d4ed8;
+  border:1px solid rgba(37,99,235,.18);
+  flex: 0 0 auto;
+}
+.questionText{
+  margin: 10px 0 0;
+  font-size: 14px;
+  display:flex;
+  gap:8px;
+  align-items:flex-start;
+  color:#111827;
+  line-height: 1.6;
+}
+.questionIcon{
+  font-size:16px;
+  line-height:1.4;
+  flex: 0 0 auto;
+}
   </style>
 </head>
 
