--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@
               </div>
 
             <div class="instruction">
-              ⚠️ You will have <strong>15 seconds</strong> to respond after you start recording.
+              ⚠️ You have <strong>3 seconds</strong> to prepare.
+              You will then have <strong>15 seconds</strong> to respond.
             </div>
           </div>
         </section>
